tests/invalid/simple/RealConvert_CompileFail_1.whiley
real f(int x) where x>=0:
    return 0.0

void System::main([string] args):
    int x   
    x = f(1)
